# CppDevTemplate

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
src/: test.cpp
